--- a/src/index.scss
+++ b/src/index.scss
@@ -19,8 +19,8 @@ body {
   display: flex;
   min-height: 100vh;
 }
-
-@media only screen and (max-width: 960px) {
+//this was initially set to 960px
+@media only screen and (max-width: 650px) {
   html {
     font-size: 12px;
   }
